Update copyright year and company name in footer

--- a/login__175_.html
+++ b/login__175_.html
@@ -2753,7 +2753,7 @@
     <a href="?Lang=iw">עברית</a><span class="separator">·</span>
     <a href="?Lang=ar">العربيّة</a>
     <div class="lang-copyright">
-      © 2023 HOJOZAT. Hojozat.net is part of Hojozat Holdings Inc. · <a href="/agent/disclaimer" target="_blank">Privacy
+      © 2026 Amadeus · <a href="/agent/disclaimer" target="_blank">Privacy
         Policy</a>
     </div>
   </div>
