Updated ITIX_Agent_Registration.html to remove the footer language bar and adjust layout CSS for full background.

--- a/ITIX_Agent_Registration.html
+++ b/ITIX_Agent_Registration.html
@@ -1,1 +1,15 @@
-<!DOCTYPE html>\n<html lang=\"en\">\n<head>\n    <meta charset=\"UTF-8\">\n    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\n    <title>ITIX Agent Registration</title>\n    <style>\n        .lang-bar {\n            display: none;\n        }\n        footer {\n            display: none;\n        }\n        /* Additional styles for layout adjustment */\n        .registration-form {\n            background: transparent;\n            /* Other layout adjustments */\n        }\n    </style>\n</head>\n<body>\n    <div class=\"registration-form\">\n        <!-- Registration form content goes here -->\n    </div>\n</body>\n</html>\n
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>ITEX Agent Registration</title>
+</head>
+<body>
+    <div class="main-content">
+        <!-- Main content goes here -->
+    </div>
+    <!-- Removed the lang-bar footer section -->
+</body>
+</html>
